...
  Widget build(BuildContext context) {
    return PopupMenuButton<String>(
      icon: const Icon(Icons.sync),
      tooltip: "Sync",
      onSelected: (value) => _handleMenuSelection(context, value),
      itemBuilder: (context) => [
        const PopupMenuItem(value: 'init', child: Text('Init Sync')),
        const PopupMenuItem(
          value: 'update_creds',
          child: Text('Update Credentials'),
        ),
        const PopupMenuItem(value: 'pull', child: Text('Pull')),
        const PopupMenuItem(value: 'push', child: Text('Push')),
...
